home-automation/homeassistant/homeassistant.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:2023.10.3 # {"$imagepolicy": "home-automation:homeassistant"}
          ports:
            - name: http
              containerPort: 8123
          volumeMounts:
            - name: homeassistant-appdata
              mountPath: /config
            - name: homeassistant-configuration
              mountPath: /config/configuration.yaml
              readOnly: true
              subPath: configuration.yaml
            - name: homeassistant-secrets
              mountPath: /config/secrets.yaml
              readOnly: true
              subPath: secrets.yaml
            - name: homeassistant-configuration
              mountPath: /config/scripts.yaml
              readOnly: true
              subPath: scripts.yaml
      volumes:
        - name: homeassistant-appdata
          hostPath:
            path: /home/me/Appdata/homeassistant
            type: Directory
        - name: homeassistant-configuration
          configMap:
            name: homeassistant
        - name: homeassistant-secrets
          secret:
            secretName: homeassistant-secrets
