home-automation/homeassistant/homeassistant.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: http
  selector:
    app: homeassistant
